# pySynphasor

./: .gitignore  LICENSE  README.md  _config.yml  desktop.ini  index.md  setup.cfg  syn_test.ipynb  synphasors.py
.github/workflows/: jekyll-gh-pages.yml
Archive/: analyze_real_pkt.ipynb  pkts3.pcap
docs/: Gemfile  Page Contribute Project.md  Page IEEE C37.118 Summary.md  Page pySynPhasor Analyze PCAP File.md  Page pySynphasor API Document  Page pySynphasor Build IEEE C37.118 Packets.md  Page pySynphasor Packet Dissection.md  Synchrophasor_Summary.md  _config.yml  packet_assemble.md
documentation/: index.md
documentation/docs/: packet_assemble.md
pyPDC/: pdc.py  sPDC.py  sPDC_Test.ipynb
pyPDC/Archive/: build_pdc.ipynb  pdc_multiple.ipynb
pySynphasor/: crc.py  pdc_v1.py  pypdc.py  synphasor.py
