
[metadata]
name = pySynphasor
version = v0.1.0
author = Shuvangkar Das
author_email = shuvangkarcdas@gmail.com
description = IEEE C37.118 Packet Manipulation Tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shuvangkardas/pySynphasor

[options]
python_requires = >=3.6 
install_requires =
    scapy

; [options.extras_require]
; dev =
;     dev_package_1
;     dev_package_2
